Add History Add History Activity and Code

--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,60 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WatchlistFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/watchlist_guideline_headline_center"
+        android:id="@+id/history_guideline_headline_center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.55" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/watchlist_guideline_header_edge"
+        android:id="@+id/history_guideline_header_edge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.20" />
 
     <ImageView
-        android:id="@+id/watchlist_imageview_applogo"
+        android:id="@+id/history_imageview_applogo"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="10dp"
         android:src="@drawable/logo_3"
-        app:layout_constraintBottom_toTopOf="@+id/watchlist_guideline_header_edge"
-        app:layout_constraintEnd_toStartOf="@+id/watchlist_guideline_headline_center"
+        app:layout_constraintBottom_toTopOf="@+id/history_guideline_header_edge"
+        app:layout_constraintEnd_toStartOf="@+id/history_guideline_headline_center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/watchlist_textview_title"
+        android:id="@+id/history_textview_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/concert_one"
-        android:text="Watchlist"
+        android:text="History"
         android:textSize="32sp"
-        app:layout_constraintBottom_toTopOf="@+id/watchlist_guideline_header_edge"
+        app:layout_constraintBottom_toTopOf="@+id/history_guideline_header_edge"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/watchlist_imageview_applogo"
+        app:layout_constraintStart_toEndOf="@+id/history_imageview_applogo"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/watchlist_swiperefreshlayout_zumba"
+        android:id="@+id/history_swiperefreshlayout_zumba"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/watchlist_guideline_header_edge">
+        app:layout_constraintTop_toTopOf="@+id/history_guideline_header_edge">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/watchlist_recyclerview_zumba"
+            android:id="@+id/history_recyclerview_zumba"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:scrollbars="vertical" />
