--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -22,7 +22,6 @@
         android:id="@+id/history_imageview_applogo"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="10dp"
         android:src="@drawable/logo_3"
         app:layout_constraintBottom_toTopOf="@+id/history_guideline_header_edge"
         app:layout_constraintEnd_toStartOf="@+id/history_guideline_headline_center"
@@ -45,6 +44,7 @@
         android:id="@+id/history_swiperefreshlayout_zumba"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
