--- a/app/src/main/res/layout/layout_no_network.xml
+++ b/app/src/main/res/layout/layout_no_network.xml
@@ -39,7 +39,7 @@
             android:id="@+id/layoutnn_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="14dp"
             android:text="Please check your Internet Connection!"
             android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/layoutnn_offlinevideos"
@@ -50,6 +50,7 @@
             android:id="@+id/layoutnn_offlinevideos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/concert_one"
             android:text="Offline Videos"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
