--- a/app/src/main/res/layout/change_password_activity.xml
+++ b/app/src/main/res/layout/change_password_activity.xml
@@ -4,19 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="700dp"
+    android:layout_height="match_parent"
     tools:context=".ChangePasswordActivity">
-
 
 
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_marginTop="30dp"
-        >
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
         <RelativeLayout
