--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -5,12 +5,12 @@
         android:icon="@drawable/ic_baseline_play_arrow_24"
         android:title="Home"/>
 
+    <item
+        android:id="@+id/bottom_nav_diet"
+        android:icon="@drawable/ic_baseline_local_dining_24"
+        android:title="Diet" />
     <item android:id="@+id/bottom_nav_menu"
         android:icon="@drawable/ic_baseline_menu_24"
         android:title="Menu"/>
-
-    <item android:id="@+id/bottom_nav_diet"
-        android:icon="@drawable/ic_baseline_local_dining_24"
-        android:title="Diet"/>
 
 </menu>
