--- a/app/src/main/res/layout/fragment_watchlist.xml
+++ b/app/src/main/res/layout/fragment_watchlist.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/concert_one"
         android:text="Watchlist"
+        android:textColor="@color/black"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/watchlist_guideline_header_edge"
         app:layout_constraintEnd_toEndOf="parent"
