--- a/app/src/main/res/layout/item_zumba.xml
+++ b/app/src/main/res/layout/item_zumba.xml
@@ -38,12 +38,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.1"
+                android:fontFamily="@font/concert_one"
                 android:gravity="center_vertical"
                 android:paddingStart="4dp"
                 android:paddingEnd="4dp"
                 android:text="Title"
-                android:textColor="#000000"
-                android:textSize="18sp" />
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
             <ImageButton
                 android:id="@+id/imagebutton_popupmenu"
@@ -60,10 +61,12 @@
             android:layout_height="0dp"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
+            android:fontFamily="@font/concert_one"
             android:paddingStart="4dp"
             android:paddingEnd="4dp"
             android:text="Category"
-            android:textSize="10sp"
+            android:textColor="@color/black"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
